Version 6.x-1.01 2012-02-24
------------------------------
by hyperboy: Reverted to Drupal default theme region names

Version 6.x-1.0
------------------------------
by hyperboy: Initial Release