@@ -1,3 +1,7 @@
+Version 6.x-1.1 2012-02-27
+------------------------------
+by hyperboy: Updated theme name from stanford_bootstrap to stanford_framework
+
 Version 6.x-1.01 2012-02-24
 ------------------------------
 by hyperboy: Reverted to Drupal default theme region names
